--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -1,10 +1,11 @@
 # status bar colors etc
-set-option -g status-bg black
-set-option -g status-fg blue
-set-option -g status-interval 5
-set-option -g visual-activity on
-set-window-option -g monitor-activity on
-set-window-option -g window-status-current-fg white
+#set-option -g status-bg colour119
+#set-option -g status-fg blue
+#set-option -g status-interval 5
+#set-option -g visual-activity on
+#set-window-option -g monitor-activity off
+#set-window-option -g window-status-current-fg cyan
+set -g default-terminal "screen-256color"
 
 # command prefix
 set -g prefix C-a
@@ -16,25 +17,78 @@ unbind % # remove default binding since replacing
 bind v split-window -h
 bind h split-window -v
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
+bind m set monitor-activity
+unbind l
+bind C-a last-window
+set -sg escape-time 0       #No escape time for vi mode
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys - M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
+set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+set -g status-keys vi
+set -g mode-keys vi
+############# TESTING STATUSLINE CONFIG START
+# color scheme (styled as vim-powerline)
+set -g status-left-length 52
+set -g status-right-length 451
+set -g status-fg brightcyan
+set -g status-bg black
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
+set -g message-fg colour16
+set -g message-bg brightblue
+set -g message-attr bold
+set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
+set -g window-status-format "#[fg=colour235,bg=colour252,bold] #I #W "
+set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=black,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour234,nobold]⮀"
+set -g status-right '#[fg=red,bg=blue] #(tmux.powavail)#(tmux.batt)%% #[fg=yellow]%a %Y-%m-%d %H%M'
+
+################ STATUS LINE TEST END
 
 # statusbar settings - adopted from tmuxline.vim and vim-airline - Theme: murmur
-set -g status-justify "left"
-set -g status "on"
-set -g status-left-style "none"
-set -g message-command-style "fg=colour144,bg=colour237"
-set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour27"
-set -g status-utf8 "on"
-set -g status-style "bg=colour234,none"
-set -g message-style "fg=colour144,bg=colour237"
-set -g pane-border-style "fg=colour237"
-set -g status-right-length "100"
-set -g status-left-length "100"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-style "fg=colour27,bg=colour234,none"
-setw -g window-status-separator ""
-setw -g window-status-style "fg=colour39,bg=colour234,none"
-set -g status-left "#[fg=colour15,bg=colour27] #S #[fg=colour27,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] %d.%m.%Y  %H:%M #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour27] #h "
-setw -g window-status-format "#[fg=colour39,bg=colour234] #I #[fg=colour39,bg=colour234] #W "
-setw -g window-status-current-format "#[fg=colour234,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #I #[fg=colour144,bg=colour237] #{pane_current_path} #[fg=colour144,bg=colour237] #W #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
+#set -g status-justify "left"
+#set -g status "on"
+#set -g status-left-style "bg=colour93"
+#set -g message-command-style "fg=colour144,bg=colour237"
+#set -g status-right-style "none"
+#set -g pane-active-border-style "fg=colour27"
+##set -g status-utf8 "on"
+#set -g status-style "bg=colour234,none"
+#set -g message-style "fg=colour144,bg=colour237"
+#set -g pane-border-style "fg=colour223"
+#set -g status-right-length "100"
+#set -g status-left-length "50"
+#setw -g window-status-activity-attr "none"
+#setw -g window-status-activity-style "fg=colour27,bg=colour234,none"
+#setw -g window-status-separator ""
+##setw -g window-status-style "fg=colour39,bg=colour234,none"
+#set -g status-left "#[fg=colour47,bg=colour27] #S #[fg=colour27,bg=colour34,nobold,nounderscore,noitalics]"
+#set -g status-right "#[fg=colour80,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] %d.%m.%Y  %H:%M #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour53] #H "
+#setw -g window-status-format "#[fg=colour40,bg=colour234] #I #[fg=colour39,bg=colour234] #W "
+#setw -g window-status-current-format "#[fg=colour234,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #I #[fg=colour144,bg=colour237] #{pane_current_path} #[fg=colour144,bg=colour237] #W #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
+#~~~~~~~~~~~~~~~~Vim-Tmux-Navigator~~~~~~~~~~~~~~~#
+
+#smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+
+# TMUX Plugin Manager 
+set -g @plugin 'tmux-plugins/tpm'               #   TPM plugin itself (Required)
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'    #   Required for Continuum
+set -g @plugin 'tmux-plugins/tmux-continuum'    #   Automatically Saves and Restores Tmux Sessions
+set -g @continuum-boot-options 'iterm,fullscreen'   #   On Boot Start Iterm (Optionally Fullscreen)
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
